add output string

--- a/fastapi/templates/post.html
+++ b/fastapi/templates/post.html
@@ -2,11 +2,11 @@
 <body>
     <div class="container">
         <form action="/input/" enctype="multipart/form-data" method="post">
-            <label>Column</label>
+            <label>Column(Example: tweet)</label>
             <br>
             <input name="username" type="username" >
             <br>
-            <label>Data</label>
+            <label>Data(Example: [["I like it"],["Good job!"]])</label>
             <br>
             <input name="password" type="username" >
             <br><br>
