--- a/fastapi/templates/post.html
+++ b/fastapi/templates/post.html
@@ -1,22 +1,9 @@
-<!--<head>-->
-<!--    <meta charset=utf-8>-->
-<!--    <meta name=viewport content="width=device-width, initial-scale=1">-->
-    
-<!--    <title>Sentiment Prediction</title>-->
-<!--    <link rel="stylesheet" type="text/css" href= "form.css">-->
-
-<!--</head>-->
-<!--<body>-->
-<!--    <div>-->
-        
-<!--    </div> <!-- /container -->-->
-<!--</body>-->
-
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Contact us</title>
+    <title>Sentiment Prediction</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="https://www.guruin.com/favicon.ico">
     <style>
       * {
       box-sizing: border-box;
