add results html

--- a/fastapi/templates/result.html
+++ b/fastapi/templates/result.html
@@ -132,12 +132,9 @@
       <div class="form-right-decoration"></div>
       <div class="circle"></div>
       <div class="form-inner">
-        <h2>Column(Example: tweet)</h2>
-        <input name="username" type="username" >
-        <h2>Data(Example: "I like it", "Wow, good job!")</h2>
+        <h2>Results</h2>
         <!--<input name="password" type="username" >-->
-        <textarea name="password" type="username" rows="5"></textarea>
-        <button type="submit" >Submit</button>
+        <textarea name="username" type="username" rows="5">{{username}}</textarea>
       </div>
     </form>
   </body>
